--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       mode: never
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
@@ -17,3 +17,5 @@ spring:
         format_sql: true
         use_sql_comments: true
         default_batch_fetch_size: 1000
+        hbm2ddl:
+          auto: create
