--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     // swagger
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0")
-
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.antlr:antlr4-runtime:4.13.0'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
