--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
         use_sql_comments: true
         default_batch_fetch_size: 1000
         hbm2ddl:
-          auto: create
+          auto: update
   springdoc:
     api-docs:
       path: /v3/api-docs
