--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,13 @@ dependencies {
     implementation 'org.antlr:antlr4-runtime:4.13.0'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    //로그인
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+    //thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
