--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,10 +29,10 @@ spring:
       client:
         registration:
           kakao:
-            client-authentication-method: client_secret_post
-            client-id: { 본인 client-id }
-            client-secret: { 본인 client-secret }
-            redirect-uri: { 본인 도메인 }/login/oauth2/code/kakao
+            client-authentication-method: "client_secret_post"
+            client-id: "84a4243d785316d879798c8ec598d783"
+            client-secret: "xQjkHPxlJjoGCYPnMCjkUq9Ra0tow5l4"
+            redirect-uri: "http://localhost:8080/login/oauth2/code/kakao"
             authorization-grant-type: authorization_code
             scope: profile_nickname
             client-name: Kakao
